recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:3: error: class List is abstract; cannot be instantiated
var rep = new List[Int](l.length-2)
          ^butLast:5: error: value :: is not a member of Int
rep = l(0)::l(l.length-2)
          ^